[gd_scene load_steps=4 format=2]

[ext_resource path="res://source/UI/SpaceUIOverview.tres" type="StyleBox" id=1]
[ext_resource path="res://source/UI/SellPopup.gd" type="Script" id=2]
[ext_resource path="res://assets/art/ui/station_button_sell_normal.png" type="Texture" id=3]

[node name="SellPopup" type="PopupDialog"]
margin_right = 450.0
margin_bottom = 200.0
popup_exclusive = true
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
margin_left = 3.0
margin_top = 3.0
margin_right = 446.0
margin_bottom = 197.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_right = 443.0
margin_bottom = 194.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 7.0
margin_right = 68.0
margin_bottom = 75.0
size_flags_horizontal = 0
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 79.0
margin_right = 443.0
margin_bottom = 93.0
custom_colors/font_color = Color( 0, 1, 0.917647, 1 )
text = "  Market - Sell Orders"

[node name="Label2" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 97.0
margin_right = 443.0
margin_bottom = 111.0
custom_colors/font_color = Color( 0, 1, 0.917647, 1 )
text = "   "

[node name="SellStats" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 115.0
margin_right = 443.0
margin_bottom = 163.0
text = "  Current Tritanium Prices: 100 ASK per 1 m3
  Station Tritanium: 9999 m3
  Estimated Sell Order Profit: 40000 ASK (-99 Station Fee)"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 167.0
margin_right = 443.0
margin_bottom = 187.0
alignment = 1

[node name="SellButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 135.0
margin_right = 252.0
margin_bottom = 20.0
text = "SELL TRITANIUM"

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 256.0
margin_right = 308.0
margin_bottom = 20.0
text = "CLOSE"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/SellButton" to="." method="_on_SellButton_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
